--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
 	<header class="header">
 		<div class="global-width">
-			<h1 class="page-title">Covid</h1>
+			<h1 class="page-title">Interactive Scroll Study</h1>
 			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos saepe, reiciendis nemo hic ducimus harum quidem! Asperiores ipsam voluptas, consequuntur veritatis aperiam, inventore porro, nobis autem assumenda perferendis a minima.</p>
 		</div>
 	</header>
