--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="graphic-item"><img class="scene-img" src="img/animation.gif" alt=""></div>
 			<div class="graphic-item"><img class="scene-img" src="img/img4.png" alt=""></div>
-			<div class="graphic-item" data-action="animaniton2">
+			<div class="graphic-item" data-action="animation2">
 				<img class="bird" src="img/animation.gif" alt="">
 				<img class="scene-img" src="img/img5.png" alt="">
 			</div>
